# modularity

./: .clippy.toml  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
.cargo/: config.toml
.github/workflows/: clippy.yml
benches/: modular_arithmetic.rs
examples/: basic_usage.rs  hardware_acceleration.rs
src/: barrett.rs  intrinsics.rs  lib.rs  montgomery.rs
