[package]
name = "modularity"
version = "0.1.0"
edition = "2021"
description = "A Rust library for performant modular arithmetic"
license = "MIT"

[dependencies]
num-traits = "0.2"
num-integer = "0.1"

# Optional dependencies
[dependencies.num-bigint]
version = "0.4"
optional = true

[features]
default = []
arbitrary-precision = ["num-bigint"]
hardware-acceleration = []

[dev-dependencies]
criterion = "0.4"
proptest = "1.0"

[[bench]]
name = "modular_arithmetic"
harness = false

# Clippy lints for the project
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
# Lints we explicitly allow
needless_range_loop = "allow" # sometimes clearer for math
needless_late_init = "allow"  # sometimes more readable
doc_markdown = "allow"        # mathematical notation often violates these rules
similar_names = "allow"       # mathematical variables often have similar names
